Further work on report

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -1,4 +1,4 @@
-﻿@article{criminalvshumint,
+@article{criminalvshumint,
 author = {Jacqueline R. Evans and Christian A. Meissner and Susan E. Brandon and Melissa B. Russano and Steve M. Kleinman},
 title ={Criminal versus HUMINT Interrogations: The Importance of Psychological Science to Improving Interrogative Practice},
 journal = {The Journal of Psychiatry \& Law},
@@ -396,4 +396,24 @@ year={2005}
     title = {Essex Computer Vision Science Face Recognition Database},
     howpublished = {\url{http://cswww.essex.ac.uk/mv/allfaces/}},
     year = 2018
+}
+
+@misc{computermisuseact,
+title = {Computer Misuse Act},
+year = 1990,
+howpublished = {http://www.legislation.gov.uk/ukpga/1990/18/},
+note = {Online, accessed 2nd May 2018}
+}
+
+@misc{dataprotectionact,
+title = {Data Protection Act},
+year = 1998,
+howpublished = {http://www.legislation.gov.uk/ukpga/1998/29/contents},
+note = {Online, accessed 2nd May 2018}
+}
+
+@misc{facebooktermsconditions,
+title = {Facebook Terms and Conditions},
+howpublished = {https://www.facebook.com/legal/terms},
+note = {Online, accessed 2nd May 2018}
 }
